Devops/Kubernetes/Project-Techpro-Rental-Car/manifest_files/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: rentalapp
spec:
  selector:
    app: rentalapp
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30001
