Devops/Kubernetes/Project-Techpro-Rental-Car/manifest_files/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rentalapp
  name: db-service
spec:
  selector:
    app: rentaldb
  type: ClusterIP  
  ports:
  - port: 3306
    targetPort: 3306
